ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/Matching_Donation_Funder__c.field-meta.xml
<CustomField>
    <fullName>Matching_Donation_Funder__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <description>From where is the donation coming.</description>
    <inlineHelpText>Must not be blank if Matching Donation.  Example TSFF/Lygia Fund.</inlineHelpText>
    <label>Matching Donation Funder</label>
    <length>25</length>
    <type>Text</type>
</CustomField>