ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npe01__Check_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>npe01__Check_Reference_Number__c</fullName>
    <label>Check/Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>