ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npe01__Custom_Payment_Field__c.field-meta.xml
<CustomField>
    <fullName>npe01__Custom_Payment_Field__c</fullName>
    <label>Custom Payment Field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>