ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npe01__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>npe01__Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>OppPayment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>