ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npe01__Paid__c.field-meta.xml
<CustomField>
    <fullName>npe01__Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>