ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npe01__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>npe01__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>ACH or EFT</fullName>
            </value>
            <value>
                <fullName>Credit Card - Network for Good</fullName>
            </value>
            <value>
                <fullName>Credit Card - Eventbrite</fullName>
            </value>
            <value>
                <fullName>Credit Card - Mobile Cause</fullName>
            </value>
            <value>
                <fullName>Credit Card - Intuit</fullName>
            </value>
            <value>
                <fullName>Credit Card - Square</fullName>
            </value>
            <value>
                <fullName>Credit Card - Indiegogo</fullName>
            </value>
            <value>
                <fullName>Greater Giving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>