ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npe01__Written_Off__c.field-meta.xml
<CustomField>
    <fullName>npe01__Written_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Written Off</label>
    <type>Checkbox</type>
</CustomField>