ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npsp__Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Authorized_Date__c</fullName>
    <description>The date and time the transaction was authorized.</description>
    <inlineHelpText>The date and time the transaction was authorized.</inlineHelpText>
    <label>Authorized Date</label>
    <type>DateTime</type>
</CustomField>