ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npsp__Authorized_UTC_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>npsp__Authorized_UTC_Timestamp__c</fullName>
    <description>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</description>
    <inlineHelpText>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</inlineHelpText>
    <label>Authorized UTC Timestamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>