ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npsp__Card_Last_4__c.field-meta.xml
<CustomField>
    <fullName>npsp__Card_Last_4__c</fullName>
    <description>The last four digits of the card used for this transaction.</description>
    <inlineHelpText>The last four digits of the card used for this transaction.</inlineHelpText>
    <label>Card Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>