ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npsp__Elevate_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>npsp__Elevate_Payment_ID__c</fullName>
    <description>The unique ID for this transaction from Elevate.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique ID for this transaction from Elevate.</inlineHelpText>
    <label>Elevate Payment ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>