ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/npsp__Origin_Type__c.field-meta.xml
<CustomField>
    <fullName>npsp__Origin_Type__c</fullName>
    <description>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</description>
    <inlineHelpText>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</inlineHelpText>
    <label>Origin Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>