ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/Payment_Donation_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Donation_Source__c</fullName>
    <description>Donation from individual or corporate matching.</description>
    <inlineHelpText>Individual or Corporate or NextGen.</inlineHelpText>
    <label>Payment Donation Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal donation</fullName>
            </value>
            <value>
                <fullName>Matching donation</fullName>
            </value>
            <value>
                <fullName>NextGen from LCF</fullName>
            </value>
            <value>
                <fullName>Corporate Sponsorship</fullName>
            </value>
            <value>
                <fullName>Foundation Donation/Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>