ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe01__OppPayment__c/fields/Tax_receipt_not_needed__c.field-meta.xml
<CustomField>
    <fullName>Tax_receipt_not_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the donor need a tax receipt (ie. letter of acknowledgment) for this donation ?</description>
    <inlineHelpText>If checked, Letter of Acknowledgment will NOT be sent.</inlineHelpText>
    <label>Tax receipt not needed</label>
    <type>Checkbox</type>
</CustomField>